$Id$

2008-04-14 Edwin Velds <e.velds@gmail.com>
	* Added register selection to symbol manager.

2008-04-12 Edwin Velds <e.velds@gmail.com>
	* Implemented reload function in symbol manager.
	* Several fixes fixes to symbol manager.

2008-04-10 Edwin Velds <e.velds@gmail.com>
	* Update to symbol table gui:
		- Better handling of edits.
		- Changing of label slot locations.
		- GUI (re)stores size of window and columns.

2008-01-27 Arnold Metselaar <arnold.metselaar@planet.nl>
	* Change the first file type option in the load symbolfile dialog 
	  to show all supported file types.

2007-12-03 Arnold Metselaar <arnold.metselaar@planet.nl>
	* Added support for link map files like those produced by HiTech's
	  linker to the SymbolManager.

2007-11-17 Edwin Velds <e.velds@gmail.com>
	* Added menu item for emulator reboot.
	* Made address labels visible in disassembled code.

2007-05-18 Edwin Velds <e.velds@gmail.com>
	* Fixed saving and restoring of window size and position.

2007-05-17 Edwin Velds <e.velds@gmail.com>
	* Improved scrollbar handling in disasm view.
	* Fixed scrollbar stepping in stack view.

2007-05-15 Edwin Velds <e.velds@gmail.com>
	* Fixed a bug that caused the disasm view to stop responding.

2007-03-08 Edwin Velds <e.velds@gmail.com>
	* Fixed communication bug in stack viewer.
	* Fixed layout bug that caused overlaps.

2007-03-07 Edwin Velds <e.velds@gmail.com>
	* Fixed dock widget insert bug that lead to crashes on exit.

2007-03-06 Edwin Velds <e.velds@gmail.com>
	* Changed resize handling of dock layout.

2007-02-23 Edwin Velds <e.velds@gmail.com>
	* Additional 64-bit fix in SymbolManager.

2007-02-22 Edwin Velds <e.velds@gmail.com>
	* changed 64-bit compilation error to one that does not warn
	  on 32-bit systems.

2007-02-15 Edwin Velds <e.velds@gmail.com>
	* Added a generic debuggable viewer.
	* Reworked some of the dock widget code to support multiple
	  viewers.

2007-02-11 Edwin Velds <e.velds@gmail.com>